<resources>
    <string name="app_name">ElixirMedicityHealthApp</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="appointment">Appointment</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="profile">Profile</string>
    <string name="logout" />
    <string name="user_since">You are a registered user since:\n %1$s</string>
</resources>