<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/bottom_home"
        android:title="@string/home"
        android:icon="@drawable/home" />

    <item android:id="@+id/bottom_appoint"
        android:title="@string/appointment"
        android:icon="@drawable/appointment"/>

    <item android:id="@+id/bottom_search"
        android:title="@string/search"
        android:icon="@drawable/search" />

    <item android:id="@+id/bottom_about"
        android:title="@string/about"
        android:icon="@drawable/about" />

    <item android:id="@+id/bottom_profile"
        android:title="@string/profile"
        android:icon="@drawable/profile" />

<!--    <item android:id="@+id/bottom_logout"-->
<!--        android:title="@string/logout"-->
<!--        android:icon="@drawable/logout" />-->

</menu>